--- a/app/views/user/credential.html.erb
+++ b/app/views/user/credential.html.erb
@@ -146,10 +146,10 @@ body {
             <strong><%= current_member.username %></strong>
           </div>
           <ul class="list-group">
-            <%= link_to settings_profile_path, :class => "active list-group-item" do %>
+            <%= link_to settings_profile_path, :class => "list-group-item" do %>
               Profile Details
             <% end %>
-            <%= link_to settings_credential_path, :class => "list-group-item" do %>
+            <%= link_to settings_credential_path, :class => "active list-group-item" do %>
               User Credential
             <% end %>
             <%= link_to "", :class => "list-group-item" do %>
@@ -175,7 +175,7 @@ body {
     <div class="col-xs-12 col-md-9">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">Profile Detail</h3>
+          <h3 class="panel-title">Change Password</h3>
         </div>
         <div class="panel-body">
           <div class="row">
@@ -183,28 +183,36 @@ body {
             <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
               <%= devise_error_messages! %>
               <div class="form-group">
-                <%= f.label :username %>
-                <%= f.text_field :username, :class => 'form-control', :type => 'text' %>
+                <%= f.label :current_password %>
+                <%= f.password_field :current_password, :class => 'form-control', :type => 'password' %>
+                <span class="help-block">We need your current password to confirm your changes</span>
               </div>
               <div class="form-group">
-                <%= f.label :first_name %>
-                <%= f.text_field :first_name, :class => 'form-control', :type => 'text' %>
+                <%= f.label :password %>
+                <%= f.password_field :password, :autocomplete => "off", :class => 'form-control', :type => 'password' %>
               </div>
               <div class="form-group">
-                <%= f.label :last_name %>
-                <%= f.text_field :last_name, :class => 'form-control', :type => 'text' %>
+                <%= f.label :password_confirmation %>
+                <%= f.password_field :password_confirmation, :class => 'form-control', :type => 'password' %>
               </div>
               <div class="form-group">
-                <%= f.label :email %>
-                <%= f.email_field :email, :class => 'form-control', :type => 'email' %>
-                <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-                  <span class="help-block">Currently waiting confirmation for: <%= resource.unconfirmed_email %></span>
-                <% end %>
-              </div>
-              <div class="form-group">
-                <%= f.submit "Update Details", :class => 'btn btn-primary btn-default' %>
+                <%= f.submit "Update password", :class => 'btn btn-primary btn-default' %>
               </div>
             <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-danger">
+        <div class="panel-heading">
+          <h3 class="panel-title">Delete Account</h3>
+        </div>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-md-12">
+              <strong>Are you sure you want to delete your account?</strong>
+              <p>Deleting your account will disable your profile and remove your name and picture from most things you've shared on Instajob.</p>
+              <%= button_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'btn btn-danger btn-sm' %>
             </div>
           </div>
         </div>
