--- a/app/views/user/credential.html.erb
+++ b/app/views/user/credential.html.erb
@@ -196,9 +196,30 @@ body {
                 <%= f.password_field :password_confirmation, :class => 'form-control', :type => 'password' %>
               </div>
               <div class="form-group">
-                <%= f.submit "Update password", :class => 'btn btn-primary btn-default' %>
+                <%= f.submit "Update Password", :class => 'btn btn-primary btn-default' %>
               </div>
             <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Change Username</h3>
+        </div>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-md-6">
+              <p>Changing your username can have unintended side effects.</p>  
+	            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+	            <%= devise_error_messages! %>
+	            <div class="form-group">
+	              <%= f.text_field :username, :class => 'form-control', :type => 'text' %>
+              </div>
+              <div class="form-group">
+                <%= f.submit "Change Username", :class => 'btn btn-primary btn-default' %>
+              </div>
+              <% end %>
             </div>
           </div>
         </div>
@@ -212,7 +233,7 @@ body {
             <div class="col-md-12">
               <strong>Are you sure you want to delete your account?</strong>
               <p>Deleting your account will disable your profile and remove your name and picture from most things you've shared on Instajob.</p>
-              <%= button_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'btn btn-danger btn-sm' %>
+              <%= button_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'btn btn-danger' %>
             </div>
           </div>
         </div>
