--- a/app/views/user/credential.html.erb
+++ b/app/views/user/credential.html.erb
@@ -180,7 +180,7 @@ body {
         <div class="panel-body">
           <div class="row">
             <div class="col-md-6">
-            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+            <%= form_for(@member, :url => { :action => "update_password" } ) do |f| %>
               <%= devise_error_messages! %>
               <div class="form-group">
                 <%= f.label :current_password %>
