update footer & search form

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -50,6 +50,20 @@ footer {
   width: 355px;
 }
 
+#company {
+  background: #eee url("images/partner-bg.png") 0 0 no-repeat;
+}
+
+.company {
+  padding-bottom: 10px;
+}
+
+.company img {
+  height: 90px;
+  width: 180px;
+  display: inline-block;
+}
+
 .center {
    margin: 5px auto;
    text-align: center;
@@ -660,10 +674,22 @@ footer {
       <img class="featurette-image img-responsive img-rounded" src="images/featured-image3.png" alt="Generic placeholder image">
     </div>
   </div>
-
-<hr class="featurette-divider">
 </div>
 <!-- Features End -->
+<section id="company" class="center">
+  <div class="container clearfix">
+    <h1 class="text-center">Featured Partner</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+    <div class="company">
+      <img src="images/osemspace1.png">
+      <img src="images/osemspace1.png">
+      <img src="images/osemspace1.png">
+      <img src="images/osemspace1.png">
+      <img src="images/osemspace1.png">
+      <img src="images/osemspace1.png">
+    </div>
+  </div>
+</section>
 <!-- FOOTER -->
 <section id="footer-bg">
   <div class="container clearfix">
@@ -712,7 +738,7 @@ footer {
   <footer>
     <div class="container">
       <p class="pull-right"><small><a href="#">BLOG</a> &middot; <a href="#">PRIVACY</a> &middot; <a href="#">TERMS</a> &middot; <a href="#">CONTACT</a> &middot; <a href="#">DEVELOPER</a></small></p>
-      <p>&copy; 2013 Instajob, Inc. All right reserved.</p>
+      <p><strong><small>&copy; 2013 Instajob, Inc. All right reserved.</small></strong></p>
     </div>
   </footer>
 </section>
