--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -231,8 +231,10 @@ footer {
             <div class="caption">
               <h3>Permanent job</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-heart"></span></a></p>
-              <p><a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-list-alt"></span></a></p>
+              <hr>
+              <strong>By: </strong>Company ABC, Inc
+              <p><strong>Location: </strong>Petaling Jaya, Malaysia</p>
+              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-heart"></span></a> <a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span></a></p>
             </div>
           </div>
         </div>
@@ -242,8 +244,10 @@ footer {
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-heart"></span></a></p>
-              <p><a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-list-alt"></span></a></p>
+              <hr>
+              <strong>By: </strong>Company ABC, Inc
+              <p><strong>Location: </strong>Petaling Jaya, Malaysia</p>
+              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-heart"></span></a> <a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span></a></p>
             </div>
           </div>
         </div>
@@ -253,8 +257,10 @@ footer {
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-heart"></span></a></p>
-              <p><a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-list-alt"></span></a></p>
+              <hr>
+              <strong>By: </strong>Company ABC, Inc
+              <p><strong>Location: </strong>Petaling Jaya, Malaysia</p>
+              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-heart"></span></a> <a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span></a></p>
             </div>
           </div>
         </div>
@@ -264,8 +270,10 @@ footer {
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-heart"></span></a></p>
-              <p><a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-list-alt"></span></a></p>
+              <hr>
+              <strong>By: </strong>Company ABC, Inc
+              <p><strong>Location: </strong>Petaling Jaya, Malaysia</p>
+              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-heart"></span></a> <a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span></a></p>
             </div>
           </div>
         </div>
@@ -277,8 +285,10 @@ footer {
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-heart"></span></a></p>
-              <p><a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-list-alt"></span></a></p>
+              <hr>
+              <strong>By: </strong>Company ABC, Inc
+              <p><strong>Location: </strong>Petaling Jaya, Malaysia</p>
+              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-heart"></span></a> <a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span></a></p>
             </div>
           </div>
         </div>
@@ -288,8 +298,10 @@ footer {
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-heart"></span></a></p>
-              <p><a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-list-alt"></span></a></p>
+              <hr>
+              <strong>By: </strong>Company ABC, Inc
+              <p><strong>Location: </strong>Petaling Jaya, Malaysia</p>
+              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-heart"></span></a> <a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span></a></p>
             </div>
           </div>
         </div>
@@ -299,8 +311,10 @@ footer {
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-heart"></span></a></p>
-              <p><a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-list-alt"></span></a></p>
+              <hr>
+              <strong>By: </strong>Company ABC, Inc
+              <p><strong>Location: </strong>Petaling Jaya, Malaysia</p>
+              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-heart"></span></a> <a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span></a></p>
             </div>
           </div>
         </div>
@@ -310,8 +324,10 @@ footer {
             <div class="caption">
               <h3>Thumbnail label</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-heart"></span></a></p>
-              <p><a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm btn-block"><span class="glyphicon glyphicon-list-alt"></span></a></p>
+              <hr>
+              <strong>By: </strong>Company ABC, Inc
+              <p><strong>Location: </strong>Petaling Jaya, Malaysia</p>
+              <p><a href="#" rel="wishlist" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="Add to wishlist" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-heart"></span></a> <a href="#" rel="details" data-placement="top" data-trigger="hover" data-toggle="tooltip" title="View more details" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-list-alt"></span></a></p>
             </div>
           </div>
         </div>
