Added terms page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -753,7 +753,7 @@ footer {
 </div>
   <footer>
     <div class="container">
-      <p class="pull-right"><small><a href="#">BLOG</a> &middot; <a href="#">PRIVACY</a> &middot; <a href="#">TERMS</a> &middot; <a href="#">CONTACT</a> &middot; <a href="#">DEVELOPER</a></small></p>
+      <p class="pull-right"><small><a href="#">BLOG</a> &middot; <a href="#">PRIVACY</a> &middot; <%= link_to "TERMS", terms_path %> &middot; <a href="#">CONTACT</a> &middot; <a href="#">DEVELOPER</a></small></p>
       <p><strong><small>&copy; 2013 Instajob, Inc. All right reserved.</small></strong></p>
     </div>
   </footer>
