--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -171,7 +171,7 @@ footer {
           <h2>Get Coffee & Start Working</h2>
           <br><br>
           <p><a class="btn btn-lg btn-danger" href="register">Create Free Account</a></p>
-          <p><small><strong>TRY IT FOR FREE &middot; NO COMMITMENT &middot; NO CREDIT CARD REQUIRED</strong></small></p>
+          <p><small><strong>TRY IT FOR FREE &middot; NO COMMITMENTS &middot; NO CREDIT CARD REQUIRED</strong></small></p>
         </div>
       </div>
     </div>
@@ -193,7 +193,7 @@ footer {
           <h1>Get Prepared</h1>
           <h2>With Thorough Analysis & Findings</h2>
           <br><br>
-          <p><a class="btn btn-lg btn-danger" href="#">Visit A Tour</a></p>
+          <p><a class="btn btn-lg btn-danger" href="#">Take A Tour</a></p>
         </div>
       </div>
     </div>
@@ -622,13 +622,13 @@ footer {
 </div>
 <div class="container">
   <div class="page-header">
-    <h1>YOUR CAREER WILL BEGAN! <small>Instajob provides faster setup and easy growing!</small></h1>
+    <h1>YOUR CAREER WILL BEGIN! <small>Instajob provides faster setup and easy growing!</small></h1>
   </div>
 </div>
 <section id="featured-job" class="center">
   <div class="container">
     <h1>Need a worker? Or maybe you have a job</h1>
-    <h3><p class="text-center">Instant visibility into your application • Identify bottlenecks • Troubleshoot your app</p></h3>
+    <h3><p class="text-center">Instant visibility of your app • Identify bottlenecks • Troubleshoot your app</p></h3>
     <div class="row">
       <div class="col-lg-4">
         <div class="center">
@@ -694,7 +694,7 @@ footer {
 <!-- Features End -->
 <section id="company" class="center">
   <div class="container clearfix">
-    <h1 class="text-center">Featured Partner</h1>
+    <h1 class="text-center">Featured Partners</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
     <div class="company">
       <img src="images/osemspace1.png">
@@ -743,7 +743,7 @@ footer {
             <button class="btn btn-default btn-primary" type="button">Subscribe</button>
           </span>
         </div>
-        <small>Occasional email updates, no spam</small>
+        <small>Occasional email updates, no spams</small>
         </small>
       </address>
     </div>
